--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 deploy.ant.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/DON/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/DON/Downloads/apache-tomcat-10.1.25-windows-x64/apache-tomcat-10.1.25
 j2ee.server.instance=tomcat101:home=C:\\Users\\DON\\Downloads\\apache-tomcat-10.1.25-windows-x64\\apache-tomcat-10.1.25
+j2ee.server.middleware=C:/Users/DON/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\build.properties
