--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=/Users/shayanhennedige/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/Users/shayanhennedige/Library/Application Support/NetBeans/17/build.properties
+user.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\build.properties
