--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\22\\tomcat101.properties
+file.reference.jbcrypt-0.4.jar-2=C:\\Users\\admin\\Downloads\\jbcrypt-0.4.jar
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\admin\\Downloads\\mysql-connector-j-8.3.0.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Shaun/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/user/Downloads/apache-tomcat-10.1.33-windows-x64 (1)/apache-tomcat-10.1.33
-j2ee.server.instance=tomcat101:home=C:\\Users\\user\\Downloads\\apache-tomcat-10.1.33-windows-x64 (1)\\apache-tomcat-10.1.33
+j2ee.server.domain=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1:base=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 j2ee.server.middleware=C:/Users/Shaun/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
