--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,4 +9,4 @@ j2ee.server.middleware=C:/Users/Shaun/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\Pamith\\AppData\\Roaming\\NetBeans\\23\\build.properties
