--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Shaun\\AppData\\Roaming\\NetBeans\\19\\config\\GlassFishEE6\\Properties\\gfv3-733685141.properties
-file.reference.jbcrypt-0.4.jar-2=C:\\Users\\Shaun\\Desktop\\Ecommer\\jbcrypt-0.4.jar
-file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Shaun\\Desktop\\Ecommer\\mysql-connector-j-8.3.0.jar
+deploy.ant.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
+file.reference.jbcrypt-0.4.jar-2=C:\\Users\\user\\Desktop\\jbcrypt-0.4.jar
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\user\\Desktop\\mysql-connector-j-8.3.0.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Shaun/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Shaun/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Shaun\\GlassFish_Server\\glassfish;C:\\Users\\Shaun\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.home=C:/Users/user/Downloads/apache-tomcat-10.1.33-windows-x64 (1)/apache-tomcat-10.1.33
+j2ee.server.instance=tomcat101:home=C:\\Users\\user\\Downloads\\apache-tomcat-10.1.33-windows-x64 (1)\\apache-tomcat-10.1.33
 j2ee.server.middleware=C:/Users/Shaun/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
