--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.dropbox-core-sdk-5.4.5.jar=C:\\Users\\Himantha\\Downloads\\Java Library\\test-abc-cinema\\dropbox-core-sdk-5.4.5.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\Himantha\\Downloads\\Java Library\\test-abc-cinema\\gson-2.10.1.jar
+file.reference.jackson-core-2.18.1.jar=C:\\Users\\Himantha\\Downloads\\Java Library\\test-abc-cinema\\jackson-core-2.18.1.jar
 file.reference.jbcrypt-0.4.jar-2=..\\..\\jbcrypt-0.4.jar
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Himantha\\Downloads\\mysql-connector-j-8.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +42,11 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jbcrypt-0.4.jar-2}
+    ${file.reference.jbcrypt-0.4.jar-2}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.dropbox-core-sdk-5.4.5.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.jackson-core-2.18.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
