--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Himantha\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\Local\\AppData\\Roaming\\NetBeans\\22\\tomcat101.properties
 file.reference.dropbox-core-sdk-5.4.5.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\dropbox-core-sdk-5.4.5.jar
 file.reference.gson-2.10.1.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\gson-2.10.1.jar
 file.reference.jackson-core-2.18.1.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\jackson-core-2.18.1.jar
@@ -6,8 +6,8 @@ file.reference.jbcrypt-0.4.jar-2=C:\\Users\\Himantha\\Downloads\\Java\\Java Libr
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\mysql-connector-j-8.3.0.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Shaun/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Himantha/Downloads/apache-tomcat-10.1.33-windows-x64/apache-tomcat-10.1.33
-j2ee.server.instance=tomcat101:home=C:\\Users\\Himantha\\Downloads\\apache-tomcat-10.1.33-windows-x64\\apache-tomcat-10.1.33
+j2ee.server.home=C:/Program Files (x86)/apache-tomcat-10.1.33
+j2ee.server.instance=tomcat101:home=C:\\Program Files (x86)\\apache-tomcat-10.1.33
 j2ee.server.middleware=C:/Users/Shaun/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
