update jsp and js code. Create review model

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,15 +1,15 @@
-deploy.ant.properties.file=C:\\Users\\Pamith\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
-file.reference.dropbox-core-sdk-5.4.5.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\dropbox-core-sdk-5.4.5.jar
-file.reference.gson-2.10.1.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\gson-2.10.1.jar
-file.reference.jackson-core-2.18.1.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\jackson-core-2.18.1.jar
-file.reference.jbcrypt-0.4.jar-2=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\jbcrypt-0.4.jar
-file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Himantha\\Downloads\\Java\\Java Library\\test-abc-cinema\\mysql-connector-j-8.3.0.jar
+deploy.ant.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
+file.reference.dropbox-core-sdk-5.4.5.jar=C:\\Users\\DON\\Downloads\\dropbox-core-sdk-5.4.5.jar
+file.reference.gson-2.10.1.jar=C:\\Users\\DON\\Downloads\\abc-jar-files\\gson-2.10.1.jar
+file.reference.jackson-core-2.18.1.jar=C:\\Users\\DON\\Downloads\\abc-jar-files\\jackson-core-2.18.1.jar
+file.reference.jbcrypt-0.4.jar-2=C:\\Users\\DON\\Downloads\\abc-jar-files\\jbcrypt-0.4.jar
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\DON\\Downloads\\abc-jar-files\\mysql-connector-j-9.1.0.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Shaun/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Program Files (x86)/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 10.1
+j2ee.server.home=C:/Users/DON/Downloads/apache-tomcat-10.1.25-windows-x64/apache-tomcat-10.1.25
+j2ee.server.instance=tomcat101:home=C:\\Users\\DON\\Downloads\\apache-tomcat-10.1.25-windows-x64\\apache-tomcat-10.1.25
 j2ee.server.middleware=C:/Users/Shaun/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Pamith\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\build.properties
