--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\tomcat101.properties
+deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\22\\tomcat101.properties
 file.reference.dropbox-core-sdk-5.4.5.jar=C:\\Users\\DON\\Downloads\\dropbox-core-sdk-5.4.5.jar
 file.reference.gson-2.10.1.jar=C:\\Users\\DON\\Downloads\\abc-jar-files\\gson-2.10.1.jar
 file.reference.jackson-core-2.18.1.jar=C:\\Users\\DON\\Downloads\\abc-jar-files\\jackson-core-2.18.1.jar
@@ -6,10 +6,10 @@ file.reference.jbcrypt-0.4.jar-2=C:\\Users\\DON\\Downloads\\abc-jar-files\\jbcry
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\DON\\Downloads\\abc-jar-files\\mysql-connector-j-9.1.0.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Shaun/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/DON/Downloads/apache-tomcat-10.1.25-windows-x64/apache-tomcat-10.1.25
-j2ee.server.instance=tomcat101:home=C:\\Users\\DON\\Downloads\\apache-tomcat-10.1.25-windows-x64\\apache-tomcat-10.1.25
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 j2ee.server.middleware=C:/Users/Shaun/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\DON\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\22\\build.properties
